<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Assistance">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/aboutus_padding">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView1"

                android:text="@string/majorcrop"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView1"

                android:text="@string/beetroot"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/btrtcrop"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"

                android:text="@string/suggestedcrop"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"

                android:text="@string/suggestedcrop1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView6"

                android:text="@string/cbgecrop"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView7"

                android:text="@string/suggestedcrop2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="337dp"
                android:layout_height="wrap_content"


                android:text="@string/rdishcrop"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView9"

                android:text="@string/suggestedcrop3"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="327dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="79dp"
                android:text="@string/cbgerdishcrop"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>