<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Assistance">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView1"

                    android:text="@string/majorcrop"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView1"

                    android:text="@string/beetroot"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:paddingTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="10dp"
                android:text="@string/btrtcrop"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="469dp"
                android:layout_height="34dp"
                android:layout_below="@+id/textView1"
                android:text="@string/suggestedcrop"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingLeft="65dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="293dp"
                android:layout_height="30dp"
                android:layout_below="@+id/textView3"
                android:paddingLeft="@dimen/aboutus_padding"
                android:text="@string/suggestedcrop1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="112dp"
                android:layout_marginStart="@dimen/aboutus_padding"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="101dp"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/album1" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="105dp"
                    android:layout_height="91dp"
                    app:srcCompat="@drawable/album4" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="44dp"
                android:text="@string/cbgecrop"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="266dp"
                android:layout_height="31dp"
                android:layout_above="@+id/textView7"
                android:paddingLeft="@dimen/aboutus_padding"
                android:text="@string/suggestedcrop2"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="106dp"
                android:layout_marginStart="@dimen/aboutus_padding"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="103dp"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/album1" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="103dp"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/album3" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="44dp"
                android:text="@string/rdishcrop"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView9"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/aboutus_padding"
                android:text="@string/suggestedcrop3"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="@dimen/slide_title"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="103dp"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/album1" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="103dp"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/album4" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="103dp"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/album3" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="79dp"
                android:paddingBottom="5dp"
                android:paddingLeft="44dp"
                android:text="@string/cbgerdishcrop"

                android:textAlignment="viewStart" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>