<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newpredict">

    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/beetroot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/newbeetroot2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="2dp"
            android:text="@string/beetroot"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/tomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"

            android:src="@drawable/newtomato2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="2dp"
            android:text="@string/tomato"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/cabbage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"

            android:src="@drawable/newcabbage2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="2dp"
            android:text="@string/cabbage"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/radish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"

            android:src="@drawable/newradish2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="2dp"
            android:text="@string/radish"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/greenchilli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"

            android:src="@drawable/newgreenchilli2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="2dp"
            android:text="@string/greenchilli"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/bittergourd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"

            android:src="@drawable/newbittergourd2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="2dp"
            android:text="@string/bittergourd"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>
    </ScrollView>

</RelativeLayout>