<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Beetroot">

    <ImageView
        android:id="@+id/simpleImageView"
        android:layout_width="fill_parent"
        android:layout_height="292dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/beetroot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:layout_alignBottom="@+id/simpleImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/beetroot"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="196dp"
        android:layout_marginEnd="47dp"
        android:text="@string/vegprice"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="372dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="209dp"
        android:layout_marginStart="75dp"
        android:text="@string/text_curr"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="372dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/simpleImageView"
        android:layout_marginEnd="73dp"
        android:text="@string/Blore"
        android:textSize="22sp" />


    <TableLayout
        android:layout_width="348dp"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="23dp">


        <TableRow
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/col1"
                android:layout_width="188dp"
                android:layout_height="33dp"
                android:layout_gravity="left"
                android:text="@string/forecast"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/col2"
                android:layout_width="188dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/col21"
                android:layout_width="188dp"
                android:layout_height="34dp"
                android:layout_gravity="left"
                android:text="@string/predict_month1"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/col22"
                android:layout_width="188dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:text="13.00"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/col31"
                android:layout_width="112dp"
                android:layout_height="34dp"
                android:layout_gravity="left"
                android:text="@string/predict_month2"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/col32"
                android:layout_width="188dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:text="17.00"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/col41"
                android:layout_width="119dp"
                android:layout_height="34dp"
                android:layout_gravity="left"
                android:text="@string/predict_month3"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/col42"
                android:layout_width="188dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:text="23.00"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />
        </TableRow>
    </TableLayout>
</RelativeLayout>

